<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/headerText"
        android:id="@+id/openningText"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="34dp" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:columnCount="5"
        android:rowCount="12"
        android:alignmentMode="alignBounds"
        android:layout_below="@+id/openningText"
        android:layout_centerHorizontal="true">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:digits="0123456789.-"
            android:ems="10"
            android:id="@+id/editText"
            android:layout_row="3"
            android:layout_column="0"
            android:autoText="false"
            android:layout_columnSpan="3"
            android:text="@string/Zero"
            android:gravity="right" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bClearText"
            android:id="@+id/bClear"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:enabled="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bAddText"
            android:id="@+id/bAdd"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal|left"
            android:clickable="true"
            android:enabled="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bMultiplyText"
            android:id="@+id/bMultiply"
            android:layout_row="5"
            android:layout_column="2"
            android:layout_gravity="right|fill"
            android:clickable="true"
            android:enabled="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bDivideText"
            android:id="@+id/bDivide"
            android:layout_row="6"
            android:layout_column="0"
            android:layout_gravity="left|center_horizontal|fill"
            android:clickable="true"
            android:enabled="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bSubtractText"
            android:id="@+id/bSubtract"
            android:layout_row="6"
            android:layout_column="1"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:enabled="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bRemainderText"
            android:id="@+id/bRemainder"
            android:layout_row="6"
            android:layout_column="2"
            android:layout_gravity="right|fill"
            android:clickable="true"
            android:enabled="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b1Text"
            android:id="@+id/b1"
            android:layout_row="7"
            android:layout_column="0"
            android:layout_gravity="left|fill"
            android:clickable="true"
            android:enabled="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b2Text"
            android:id="@+id/b2"
            android:layout_row="7"
            android:layout_column="1"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:enabled="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b3Text"
            android:id="@+id/b3"
            android:layout_row="7"
            android:layout_column="2"
            android:layout_gravity="right|fill"
            android:clickable="true"
            android:enabled="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b4Text"
            android:id="@+id/b4"
            android:layout_row="8"
            android:layout_column="0"
            android:layout_gravity="left|fill"
            android:clickable="true"
            android:enabled="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b5Text"
            android:id="@+id/b5"
            android:layout_row="8"
            android:layout_column="1"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:enabled="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b6Text"
            android:id="@+id/b6"
            android:layout_row="8"
            android:layout_column="2"
            android:layout_gravity="right|fill"
            android:clickable="true"
            android:enabled="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b7Text"
            android:id="@+id/b7"
            android:layout_row="9"
            android:layout_column="0"
            android:layout_gravity="left|fill"
            android:clickable="true"
            android:enabled="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b8Text"
            android:id="@+id/b8"
            android:layout_row="9"
            android:layout_column="1"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:enabled="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b9Text"
            android:id="@+id/b9"
            android:layout_row="9"
            android:layout_column="2"
            android:layout_gravity="right|fill"
            android:clickable="true"
            android:enabled="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Zero"
            android:id="@+id/b0"
            android:layout_row="10"
            android:layout_column="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bDotText"
            android:id="@+id/bDot"
            android:layout_row="10"
            android:layout_column="2"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:enabled="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bAnswerText"
            android:id="@+id/bAnswer"
            android:layout_row="11"
            android:layout_column="1"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:enabled="true" />
    </GridLayout>

</RelativeLayout>
